* agrego reporte de dependencias al codigo

--- a/Tp3/informe/cambiosDisenio.tex
+++ b/Tp3/informe/cambiosDisenio.tex
@@ -9,4 +9,15 @@
 	\item Al encontrar problemas complejos en algunas clases fuimos delegando algunas responsablilidades a clases nuevas como por ejemplo en ManejdorDeSaldo y el ManejadorDeApuestas.
 \end{itemize}
 
+\subsection{Dependencias}
+\label{sec:Dependencias}
+
+Logramos que las dependencias resultaran como las previstas, exepto por las dependencias del ``lanzador del casino''.
+
+\begin{figure}[htbp]
+	\centering
+		\includegraphics[width=1.00\textwidth]{img/jdepend-report.png}
+	\label{fig:jdepend-report}
+\end{figure}
+
 
