* agrego referencias a la bibliografia en el informe

--- a/Tp3/informe/CasinoOnline.tex
+++ b/Tp3/informe/CasinoOnline.tex
@@ -16,8 +16,9 @@
 
 %\usepackage{multirow}
 \usepackage{listings}
-\usepackage{tabularx}
-\usepackage{rotating}
+\usepackage{tabularx}%dablas con ancho dinamicamente acomodables
+\usepackage{rotating}%rotar texto
+\usepackage[nottoc]{tocbibind}%incluier bibilografia
 %\lstset{
 %  breaklines=true,          % line wrapping on
 %  language=ocl,
@@ -84,5 +85,9 @@
 	\newpage
 	
 	\input{./concluciones.tex}
-
+	
+	\newpage
+	
+	\input{./referencias.tex}
+	
 \end{document}
