* modif en el informe

--- a/Tp3/informe/caratula.tex
+++ b/Tp3/informe/caratula.tex
@@ -40,16 +40,16 @@
 \begin{center}
 	\begin{flushleft} \large
 	\emph{Author:}\\
-		Isis \textsc{Aquino} $313/05$ \\
-		Maria de los Angeles \textsc{Alvarez} $264/05$\\
-		Christian Alejandro \textsc{Engler} $314/05$
+		Isis \textsc{Aquino} $313/05$ \hfill \textsl{isisaquino@yahoo.com.ar}\\
+		Maria de los Angeles \textsc{Alvarez} $264/05$ \hfill \textsl{mdelosaalvarez@hotmail.com}\\
+		Christian Alejandro \textsc{Engler} $314/05$ \hfill \textsl{caeycae@gmail.com}
 	\end{flushleft}
 \end{center}.\\[2cm]
 
 \begin{center}
 	\begin{flushleft} \large
-	\emph{Supervisor:} \\
-		Sergio \textsc{D'Arrigo}
+	\emph{Corrector:} \\
+		Sergio \textsc{D`Arrigo}
 	\end{flushleft}
 \end{center}
  
