--- a/Tp3/informe/implementacion.tex
+++ b/Tp3/informe/implementacion.tex
@@ -149,7 +149,7 @@ Main targets:
  check    Genera reporte de violaciones de convenciones de codigo.
  clear    Borra para un recompilacion completa
  dot      Genera grafo de dependencias.
- javadoc  Genera reporte de violaciones de convenciones de codigo.
+ javadoc  Genera javadoc.
  jdepend  Genera reporte de dependencias
  make     Compila el proyecto
  makedir  Crea los directorios
